--- a/.github/workflows/ci-blitzvideo-api.yml
+++ b/.github/workflows/ci-blitzvideo-api.yml
@@ -36,9 +36,9 @@ jobs:
           coverage: none
           tools: composer
 
-      - name: Copiar .env.example a .env
-        run: php -r "file_exists('../.env') || copy('../.env.example', '../.env');"
-        working-directory: Blitzvideo-api
+     - name: Copiar .env.example a .env
+       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+       working-directory: ${{ github.workspace }}
 
       - name: Mostrar contenido de .env
         run: cat .env
