--- a/.github/workflows/ci-blitzvideo-api.yml
+++ b/.github/workflows/ci-blitzvideo-api.yml
@@ -75,7 +75,7 @@ jobs:
 
       - name: Crear base de datos
         run: |
-          mysql -u root -proot -e "CREATE DATABASE IF NOT EXISTS Blitzvideo;"
+          mysql -u root -proot -h 127.0.0.1 -e "CREATE DATABASE IF NOT EXISTS Blitzvideo;"
 
       - name: Ejecutar migraciones de la base de datos
         run: php artisan migrate --force
