--- a/.env.example
+++ b/.env.example
@@ -54,6 +54,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 AUTH_API_URL="http://OauthApi:8000/api/v1/validate"
 BLITZVIDEO_BASE_URL="http://localhost:8001/api/v1/"
+BLITZVIDEO_HOST='localhost'
 
 FFMPEG_BINARIES=/usr/bin/ffmpeg
 FFPROBE_BINARIES=/usr/bin/ffprobe
