ruta visualizer arreglada

--- a/.env.example
+++ b/.env.example
@@ -55,7 +55,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 AUTH_API_URL="http://OauthApi:8000/api/v1/validate"
 BLITZVIDEO_BASE_URL="http://localhost:8001/api/v1/"
 BLITZVIDEO_HOST='localhost'
-VISUALIZER_HOST='http://localhost:8002/api/v1/'
+VISUALIZER_HOST='http://localhost:3002/#/'
 
 
 FFMPEG_BINARIES=/usr/bin/ffmpeg
