job en correo de recuperacion de password y mejora del correo.

--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ DB_PASSWORD=root
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=s3
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
