--- a/.env.example
+++ b/.env.example
@@ -44,9 +44,9 @@ AWS_BUCKET=blitzvideo-bucket
 AWS_USE_PATH_STYLE_ENDPOINT=true
 AWS_ENDPOINT=http://minio:9000
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+PUSHER_APP_ID=local
+PUSHER_APP_KEY=APP_KEY
+PUSHER_APP_SECRET=APP_SECRET
 PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
@@ -60,3 +60,7 @@ VISUALIZER_HOST='http://localhost:3002/#/'
 
 FFMPEG_BINARIES=/usr/bin/ffmpeg
 FFPROBE_BINARIES=/usr/bin/ffprobe
+
+DOCKER_HOST_IP=172.18.0.15
+STREAM_BASE_LINK="http://172.18.0.15:8080/hls/"
+RTMP_SERVER='rtmp://172.18.0.15:1935/live/'
