--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "beyondcode/laravel-websockets": "^2.0@beta",
+        "doctrine/dbal": "^4.2",
         "fruitcake/laravel-cors": "^3.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
@@ -15,6 +17,7 @@
         "league/flysystem-aws-s3-v3": "^1.0",
         "pbmedia/laravel-ffmpeg": "^7.8",
         "php-ffmpeg/php-ffmpeg": "^1.2",
+        "pusher/pusher-php-server": "^7.2",
         "tymon/jwt-auth": "^1.0@dev"
     },
     "require-dev": {
