--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,7 @@ events {
     worker_connections 4096;
 }
 
+
 rtmp {
     server {
         listen 1935;
@@ -11,7 +12,10 @@ rtmp {
 
         application live {
             live on;
-            record off;
+            record all;
+            record_path /var/streams/records/;
+            record_unique on;
+            
             hls on;
             hls_path /mnt/hls/;
             hls_fragment 3s;
@@ -19,7 +23,6 @@ rtmp {
         }
     }
 }
-
 http {
     error_log /var/log/nginx/error.log debug;
     access_log /var/log/nginx/access.log;
