se elimina funcion de estado para que funcione con obs

--- a/nginx.conf
+++ b/nginx.conf
@@ -16,6 +16,8 @@ rtmp {
             record_path /var/streams/records/;
             record_unique on;
             
+            on_publish http://blitzvideo-api:8000/api/v1/streams/iniciar;
+            on_done http://blitzvideo-api:8000/api/v1/streams/finalizar;
             hls on;
             hls_path /mnt/hls/;
             hls_fragment 3s;
