--- a/nginx.conf
+++ b/nginx.conf
@@ -15,9 +15,9 @@ rtmp {
             record all;
             record_path /var/streams/records/;
             record_unique on;
-            
             on_publish http://blitzvideo-api:8000/api/v1/streams/iniciar;
             on_done http://blitzvideo-api:8000/api/v1/streams/finalizar;
+            exec_record_done /usr/local/bin/scripts/upload_to_minio.sh $path;
             hls on;
             hls_path /mnt/hls/;
             hls_fragment 3s;
@@ -25,6 +25,7 @@ rtmp {
         }
     }
 }
+
 http {
     error_log /var/log/nginx/error.log debug;
     access_log /var/log/nginx/access.log;
