--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,14 @@ DB_DATABASE=blitzvideo
 DB_USERNAME=root
 DB_PASSWORD=root
 
-BROADCAST_DRIVER=log
+PUSHER_APP_ID=blitzvideo-app
+PUSHER_APP_KEY=blitzvideo-key
+PUSHER_APP_SECRET=blitzvideo-secret
+PUSHER_HOST=172.18.0.17 
+PUSHER_PORT=6001
+PUSHER_SCHEME=http
+BROADCAST_DRIVER=pusher
+
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=s3
 QUEUE_CONNECTION=database
@@ -48,6 +55,12 @@ PUSHER_APP_ID=local
 PUSHER_APP_KEY=APP_KEY
 PUSHER_APP_SECRET=APP_SECRET
 PUSHER_APP_CLUSTER=mt1
+
+PUSHER_APP_CLUSTER=mt1
+USE_TLS=false            
+
+LARAVEL_WEBSOCKETS_ENABLED=true
+
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
