implementacion usuario puede borrar comentarios de su propio video

--- a/nginx.conf
+++ b/nginx.conf
@@ -23,6 +23,12 @@ rtmp {
             hls_fragment 3s;
             hls_playlist_length 60s;
         }
+
+           application stat {
+            live on;
+            stats_xml on;             
+        }
+
     }
 }
 
@@ -54,6 +60,14 @@ http {
             proxy_buffering off;
             proxy_request_buffering off;
         }
+     
+       location /stat {
+            rtmp_stat all;
+            rtmp_stat_stylesheet stat.xsl;
+            allow all;
+            add_header Refresh "3; $request_uri";  # refresca cada 3s
+        }
+
 
         types {
             application/vnd.apple.mpegurl m3u8;
