--- a/.env.example
+++ b/.env.example
@@ -18,10 +18,14 @@ DB_PASSWORD=root
 PUSHER_APP_ID=blitzvideo-app
 PUSHER_APP_KEY=blitzvideo-key
 PUSHER_APP_SECRET=blitzvideo-secret
-PUSHER_HOST=172.18.0.17 
+PUSHER_HOST=127.0.0.1
 PUSHER_PORT=6001
 PUSHER_SCHEME=http
 BROADCAST_DRIVER=pusher
+
+
+#PUSHER_HOST=172.18.0.17 
+
 
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=s3
