--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "pbmedia/laravel-ffmpeg": "^7.8",
         "php-ffmpeg/php-ffmpeg": "^1.3",
         "pusher/pusher-php-server": "^7.2",
+        "stevebauman/purify": "^6.3",
         "tymon/jwt-auth": "^1.0@dev"
     },
     "require-dev": {
