datos de parametros del stream + viewers

--- a/nginx.conf
+++ b/nginx.conf
@@ -22,6 +22,11 @@ rtmp {
             hls_path /mnt/hls/;
             hls_fragment 3s;
             hls_playlist_length 60s;
+            hls_nested on;
+
+            on_play http://blitzvideo-api:8000/api/v1/streams/hls-event;
+            on_play_done http://blitzvideo-api:8000/api/v1/streams/hls-event;
+            
         }
 
     }
@@ -59,6 +64,15 @@ http {
         types {
             application/vnd.apple.mpegurl m3u8;
             video/mp2t ts;
+        }
+         
+        location /stat {
+            rtmp_stat all;
+            rtmp_stat_stylesheet stat.xsl;
+        }
+
+        location /stat.xsl {
+            root /usr/local/nginx/html;
         }
     }
 }
