feat(stream): Refactorización completa del StreamController y gestión del ciclo de vida
Implementa el método  para la gestión manual del estado inactivo, con validación para evitar desactivación en estado DIRECTO. Se consolida y refactoriza la lógica de ,  (hook de NGINX) y  (hook de NGINX con VOD) para asegurar la integridad del ciclo de vida del stream (Activo -> Directo -> Finalizado/Inactivo).

--- a/nginx.conf
+++ b/nginx.conf
@@ -21,7 +21,8 @@ rtmp {
             hls_fragment 3s;
             hls_playlist_length 60s;
             hls_nested on;
-
+            on_publish http://blitzvideo-api:8000/api/v1/streams/iniciar;
+            on_publish_done http://blitzvideo-api:8000/api/v1/streams/finalizar;
             on_play http://blitzvideo-api:8000/api/v1/streams/hls-event;
             on_play_done http://blitzvideo-api:8000/api/v1/streams/hls-event;
             
