--- a/nginx.conf
+++ b/nginx.conf
@@ -19,8 +19,17 @@ rtmp {
             hls on;
             hls_path /mnt/hls/;
             hls_fragment 3s;
-            hls_playlist_length 60s;
+            hls_playlist_length 6s;
+
             hls_nested on;
+
+
+
+            hls_continuous on;
+            hls_cleanup  on;
+            hls_fragment_naming timestamp;
+
+            
             on_publish http://blitzvideo-api:8000/api/v1/streams/iniciar;
             on_publish_done http://blitzvideo-api:8000/api/v1/streams/finalizar;
             on_play http://blitzvideo-api:8000/api/v1/streams/hls-event;
